--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,6 @@
     android:id="@+id/layout_main"
     tools:context=".MainActivity">
 
-
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -18,6 +17,7 @@
         android:layout_gravity="bottom|end"
         app:rippleColor="@color/white"
         android:tint="@color/white"
+        android:backgroundTint="@color/primary"
         android:id="@+id/add_button"
         android:layout_margin="20dp">
 
@@ -27,7 +27,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/recyclerview"
-
+        android:layout_marginTop="7dp"
         >
 
     </androidx.recyclerview.widget.RecyclerView>
