--- a/app/src/main/res/menu/options_menu.xml
+++ b/app/src/main/res/menu/options_menu.xml
@@ -2,7 +2,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-
     <item
         android:id="@+id/delet_all_notes"
         android:title="@string/delete_all_items" />
@@ -10,6 +9,7 @@
     <item android:id="@+id/searchbar"
         android:title="@string/searchbar"
         android:icon="@drawable/ic_baseline_search_24"
-        app:showAsAction="always|collapseActionView"
-        app:actionViewClass="android.widget.SearchView"/>
+        app:showAsAction="collapseActionView|always"
+        app:actionViewClass="androidx.appcompat.widget.SearchView"/>
+
 </menu>
